fix scrollbar

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -28,14 +28,11 @@ table{border-collapse: collapse;border-spacing: 0;}
 .k-slider-horizontal .k-tick{background-image:url('../img/slider-h.gif')}
 .k-slider-vertical .k-tick{background-image:url('../img/slider-v.gif')}
 .k-tile .k-folder{background-image:url('../img/imagebrowser.png')}
-.km-scroll-container{
-    overflow-x: auto;
+#content{
+    overflow: auto;
 }
-.km-vertical-scrollbar{
+.km-vertical-scrollbar, .km-horizontal-scrollbar{
     height: 0;
-}
-.km-horizontal-scrollbar{
-    width: 0;
 }
 .km-view{
     z-index: 1;
@@ -269,6 +266,7 @@ button:hover{
     margin: 0 0 -32px 10px;
 }
 #addUser{
+    width: 120px;
     margin: 0 0 25px 70px;
     cursor: pointer;
     color: @blue;
