--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -558,7 +558,6 @@ zoom: 1;*/
 
     #content {
         top: @navHeight;
-        background: #00f;
         margin-right: 0;
     }
 }
@@ -581,10 +580,6 @@ zoom: 1;*/
 
     #nav .last {
         margin-right: 0px;
-    }
-
-    #content {
-        background: #0f0;
     }
 }
 
